# django_orm_challenges

./: pyproject.toml
challenges/views/level_1/: a_create_book.py  b_book_details.py  c_delete_book.py  d_update_book.py
orm_challenges/: settings.py
utils/: request_client.py
